예약시간 출력

--- a/Utils/email/newReservations2.html
+++ b/Utils/email/newReservations2.html
@@ -54,9 +54,9 @@
 													<tr>
 														<td>확 정 일 : <span style="color:#007acc;">#USEDATE#</td>
 													</tr>
-													<!-- <tr>
-														<td>등록일시 : <span style="color:#007acc;">#DATE#</td>
-													</tr> -->
+													<tr>
+														<td>사용시간 : <span style="color:#007acc;">#USETIME#</td>
+													</tr>
 												</table>
 												</center>
 											</td>
